--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "has-symbols": "^1.0.3",
     "hasown": "^2.0.2",
     "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
@@ -43,6 +44,7 @@
     "mime": "^1.6.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "morgan": "^1.10.0",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
     "object-inspect": "^1.13.3",
@@ -69,7 +71,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
